# as

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ENHANCEMENTS.md  README.md  STRATEGIC_REPORT.md  VIBECODER_LOG.md  haiku.txt  hello.txt  plan.md  status report.md  t1b.txt  test_controller.sh
.agents_tmp/: PLAN.md  STATUS_REPORT.md
app/: README.md  pubspec.yaml
app/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/billiez/vibecode/: DirectReplyPlugin.kt  DirectReplyReceiver.kt  MainActivity.kt
app/lib/: main.dart
app/lib/models/: event.dart  task.dart
app/lib/providers/: chat_provider.dart  settings_provider.dart  task_provider.dart
app/lib/screens/: app_shell.dart  chat_screen.dart  home_screen.dart  live_feed_screen.dart  log_viewer_screen.dart  settings_screen.dart  setup_screen.dart
app/lib/services/: api_service.dart  background_service.dart  background_service_stub.dart  notification_service.dart  preferences_service.dart
app/lib/widgets/: branch_popup.dart  event_card.dart  status_banner.dart  task_tile.dart
app/test/: chat_ordering_test.dart  widget_test.dart
app/web/: index.html  manifest.json
backend/: .env.example  agent_runner.py  chat_service.py  database.py  fcm_service.py  main.py  models.py  pyproject.toml  test_comprehensive.py  test_exhaustive.py  tests.py  worker.js  worker.py  wrangler.toml
backend/.wrangler/cache/: wrangler-account.json
backend/deploy/: deploy.sh  vibecode.service
(+1 files in other folders)
